        * Add is_exe method to SPVM::Builder::Config and SPVM::Builder::Config::Exe.
        * Add before_link field to SPVM::Builder::Config
        * Execute a before_link field callback before the link in SPVM::Bulder::CC link method.
        * Execute a before_link field callback before the link in SPVM::Bulder::Exe link method.
        * Add SPVM::Builder::ObjectFileInfo module
        
        [NON BACKWORD COMPATIBLE CHANGES]
        * Change cc_each second argument of SPVM::Builder::Config from each source file to optional argument as hash reference
          - source_file
          - class_name
        * Change ccflags_each second argument of SPVM::Builder::Config from each source file to optional argument as hash reference
          - source_file
          - class_name
          - cc
        * Remove global_ccflags fields of SPVM::Builder::Config::Exe. Please use global_ccflags_each instead.
        * Remove add_global_ccflas method of SPVM::Builder::Config::Exe. Please use global_ccflags_each instead.
        
0.9129  2021-01-25
        [CHANGE]
        * Improve the error messages of character literals.
        [FIX BUGS]
        * Fix the bug that \b is escaped to ASCII Code 8 BS in the charater literal.
          \b is a raw escape charater in the string literal. In document, \b is both escaped to ASCII Code 8 BS and \b is raw escape charater.
          It is right that \b is a raw escape charater.
        * Fix the bug that the uname of the platform can't be detected in Makefile.PL.
        [NON BACKWORD COMPATIBLE CHANGES]
        * Sorry. \b is not supported in the character literal. Please replace \b with \x08.

0.9128  2021-01-24
        [CHANGE]
        * Add spvmlibgen command and SPVM::Builder::Generator::Lib.
        * Currently SPVM doesn't support Alpine Linux because segmentation fault occurs
          due to incompatibility with glibc.
          If you want to use SPVM on Alpine Linux,