@@ -4,9 +4,9 @@ use Data::Dumper;
 
 use SPVM::Builder::Config::Exe;
 
-my $bconf = SPVM::Builder::Config::Exe->new_gnu99;
+my $config = SPVM::Builder::Config::Exe->new_gnu99;
 
-$bconf->before_link(sub {
+$config->before_link(sub {
   my ($config, $objects) = @_;
   
   warn Dumper $objects;
@@ -14,4 +14,4 @@ $bconf->before_link(sub {
   return $objects;
 });
 
-$bconf;
+$config;
